feat: Update app icons and integrate Firebase compat SDKs
This commit updates the application's favicons and Apple touch icons to use new, higher-resolution assets hosted on postimg.cc.

Additionally, it integrates the Firebase Compat SDKs for App and Firestore, preparing the application for future backend functionalities that leverage these services. This includes adding the necessary script tags to `index.html`.

The `types.ts` file has been updated to include `unlockHour` in the `ChecklistTemplate` interface and `aiFlagged`/`aiReason` in the `ChecklistSubmission` interface, paving the way for enhanced checklist logic and AI-driven flagging of submissions.

Mock data has been adjusted, and UI components (`Layout.tsx`, `TrainingView.tsx`, `OpsView.tsx`) have been updated to accommodate these changes and new features, such as diagnostic tools and enhanced settings.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Boundaries">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/924/924514.png">
+    <link rel="apple-touch-icon" href="https://i.postimg.cc/mD7XFm9L/Boundaries-Logo-Icon.png">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/mD7XFm9L/Boundaries-Logo-Icon.png">
+
+    <!-- Firebase Compat SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
