--- a/scripts/upload-handbook.html
+++ b/scripts/upload-handbook.html
@@ -19,14 +19,14 @@
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     h1 {
-      color: #001F3F;
+      color: #0F2B3C;
       margin-top: 0;
     }
     input[type="file"] {
       display: none;
     }
     .btn {
-      background: #001F3F;
+      background: #0F2B3C;
       color: white;
       padding: 12px 24px;
       border: none;
